[tool.poetry]
name = "django-ummai"
version = "0.0.1"
description = ""
authors = ["TreyWW"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.0.2"
requests = "^2.31.0"
black = "^24.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
djlint = "^1.34.1"
coverage = "^7.4.4"
types-requests = "^2.31.0.20240311"

[tool.black]
line-length = 120

[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'