[project]
name = "django-umami"
description = "A django package to connect to umami for tracking actions"
authors = [
    {name = "Trey", email="trey@strelix.org"}
]
requires-python = ">=3.10"

dynamic = [
    "version",
    "classifiers",
    "license"
]

dependencies = [
    "Django>=3.2"
]

[tool.setuptools.dynamic]
version = {attr = "django_umami.__version__"}

[project.urls]
Homepage = "https://github.com/TreyWW/django-umami"
Issues = "https://github.com/TreyWW/django-umami/issues"

[tool.poetry]
name = "django-ummai"
version = "0.0.2"
description = ""
authors = ["TreyWW"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
types-requests = "^2.31.0.20240311"
typing_extensions = "^4.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
coverage = "^7.4.4"

[tool.black]
line-length = 120

[build-system]
requires = ['setuptools>=40.8.0', 'django>=3.2']
build-backend = 'setuptools.build_meta'